# squares

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  segment.cpp  segment.h  squares.pro
